--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "itamars-package",
+  "name": "myPackage",
   "version": "1.0.0",
   "description": "best package ever",
   "main": "index.js",
